fix word wrapping in inline/block code elements

--- a/styles/helpers.styl
+++ b/styles/helpers.styl
@@ -14,6 +14,7 @@ flex-fixed()
 flex-stretch()
   -webkit-flex-grow: 1
   flex-grow: 1
+  min-width: 0
 
 flex-spaced()
   -webkit-justify-content: space-between
