--- a/styles/markdown.styl
+++ b/styles/markdown.styl
@@ -51,6 +51,7 @@ pre
   overflow-x: auto
   padding: 0.5em
   background-color: code-color
+  box-sizing: content-box
   > code
     background-color: transparent
     padding: 0
